--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>sample-applications</groupId>
-  <artifactId>xxz-sample-ddata</artifactId>
+  <artifactId>canary-sample-data</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>xxz-sample-ddata</name>
+  <name>canary-sample-data</name>
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
